--- a/admin.html
+++ b/admin.html
@@ -432,6 +432,40 @@
     </div>
   </div>
 
+<!-- ====================== -->
+<!-- 📘 MODAL TÉRMINOS Y CONDICIONES -->
+<!-- ====================== -->
+<div id="modalTyC"
+     style="display:none; position:fixed; top:0; left:0; width:100%; height:100%;
+     background:rgba(0,0,0,0.5); z-index:9999;">
+
+  <div style="background:white; width:90%; max-width:650px; margin:60px auto;
+       padding:25px; border-radius:14px; max-height:80vh; overflow-y:auto;">
+
+    <h2 style="text-align:center; color:#0b5ed7; margin-bottom:20px;">
+      Términos y Condiciones
+    </h2>
+
+    <div id="contenidoTyC" style="color:#333; line-height:1.6; font-size:15px;">
+      Cargando...
+    </div>
+
+    <div style="text-align:center; margin-top:25px;">
+      <button id="btnAceptarTyC"
+        style="background:#198754; color:white; border:none; padding:10px 20px;
+        border-radius:8px; cursor:pointer; font-weight:bold;">
+        ✔ Acepto los Términos y Condiciones
+      </button>
+    </div>
+  </div>
+</div>
+
+<!-- Link permanente para ver los TyC -->
+<div style="text-align:center; margin:40px 0;">
+  <a href="#" onclick="mostrarTyC()" style="color:#0b5ed7; font-weight:600;">
+    Ver Términos y Condiciones
+  </a>
+</div>
 
 
 
