--- a/index-landing.html
+++ b/index-landing.html
@@ -682,16 +682,16 @@
       <!-- ASESOR 1 -->
       <div class="asesor-card">
         <img src="imag/ASESORA-VENTAS.jpg" alt="Asesor 1">
-        <h3>Nombre Apellido</h3>
+        <h3>ANDREA</h3>
         <p>Asesor Comercial</p>
 
-        <a class="btn-whatsapp" href="https://wa.me/549XXXXXXXXX">
+        <a class="btn-whatsapp" href="https://wa.me/5493786619044" target="_blank">
           WhatsApp del Asesor
         </a>
       </div>
 
       <!-- ASESOR 2 -->
-      <div class="asesor-card">
+      <!-- <div class="asesor-card">
         <img src="imag/ASESORA-VENTAS.jpg" alt="Asesor 2">
         <h3>Nombre Apellido</h3>
         <p>Asesor Comercial</p>
@@ -699,7 +699,7 @@
         <a class="btn-whatsapp" href="https://wa.me/549XXXXXXXXX">
           WhatsApp del Asesor
         </a>
-      </div>
+      </div>   -->
 
     </div>
   </section>
