mejoras en el formato de folletos ordenado por categoria

--- a/admin.html
+++ b/admin.html
@@ -493,8 +493,7 @@
 
             <p>
               Bienvenido a <b>VIDRIERA VIRTUAL</b>.
-              Los presentes Términos y Condiciones regulan el acceso y uso del sitio web (ACA VA EL DOMINIO
-              DEFINITIVO), así como los servicios ofrecidos por José Manuel Carrizo (CUIT 20-33728252-1) y
+              Los presentes Términos y Condiciones regulan el acceso y uso del sitio web (https://josema1031.github.io/vidrieravirtual/), así como los servicios ofrecidos por José Manuel Carrizo (CUIT 20-33728252-1) y
               María Soledad Farias (CUIT 27-35121404-5), con domicilio en Boulevard San Juan S/N, Gualeguay,
               Entre Ríos, Argentina.
             </p>
